--- a/CoronaManagementSystem/wwwroot/index.html
+++ b/CoronaManagementSystem/wwwroot/index.html
@@ -67,7 +67,7 @@
     <script src="./js/vaccination.js"></script>
     <script src="./js/memberActions.js"></script>
     <script src="./js/vaccinationActions.js"></script>
-    <script src="./js/covid19Data.js"></script>
+    <script src="./js/Statistics.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 
